Incomplete - # 3521: Tamaño de Cuenta Contable en Conect@ http://trac.esferalia.net/trac/aon/ticket/3521